--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "0047d930-76bf-11ea-1377-bb3cda807e9f"
 authors = ["Jasmin Walter <jasmin.walter@mni.thm.de>"]
 version = "0.1.0"
 
+[deps]
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1"
 
