--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Jasmin Walter <jasmin.walter@mni.thm.de>"]
 version = "0.1.0"
 
 [deps]
+LombScargle = "fc60dff9-86e7-5f2f-a8a0-edeadbb75bd9"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 
 [compat]
 julia = "1"
