--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ jobs:
       julia: 1.3
       os: linux
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
+        - julia --project --check-bounds=yes -e 'import Pkg; Pkg.build(); Pkg.test("HRV.jl"; coverage=true)'
+
+      after_success:
+        - julia --project -e 'import Pkg; Pkg.add("Coverage");'
+        - julia --project -e 'import Pkg; Pkg.add("Documenter"); Pkg.add("DocumenterTools");'
         - julia --project=docs/ docs/make.jl
-      after_success: skip
