--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ jobs:
       julia: 1.3
       os: linux
       script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                               Pkg.instantiate()'
         - julia --project --check-bounds=yes -e 'import Pkg; Pkg.build(); Pkg.test("HRV.jl"; coverage=true)'
 
       after_success:
