--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ jobs:
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
-        - julia --project=test/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
-        - julia --project=test/ test/runtests.jl
         - julia --project=docs/ docs/make.jl
-      after_success: skip
+      after_success:
+        - julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
