--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ julia:
 
 codecov: true
 
+script:
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("HRV.jl"); Pkg.test("HRV.jl"; coverage=true)';
+
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
+
 jobs:
   include:
     - stage: "Documentation"
@@ -14,4 +20,4 @@ jobs:
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success:
-        - julia --project -e 'import Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+        skip
