--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ julia:
   - 1
 
 codecov: true
-
+before_install:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+script:
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("HRV")'
+  - julia -e 'Pkg.test("HRV", coverage=true)'
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())';
+- Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
 
 jobs:
   include:
