--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,18 @@ julia:
   - 1
 
 codecov: true
-before_install:
-  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-script:
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("HRV")'
-  - julia -e 'Pkg.test("HRV", coverage=true)'
-after_success:
-- Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
 
 jobs:
   include:
+    - stage: "Testing"
+      before_install:
+        - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+      script:
+        - julia -e 'Pkg.clone(pwd()); Pkg.build("HRV")'
+        - julia -e 'Pkg.test("HRV", coverage=true)'
+      after_success:
+        - Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+
     - stage: "Documentation"
       julia: 1.3
       os: linux
