--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ codecov: true
 jobs:
   include:
     - stage: "Testing"
+      julia: 1.3
+      os: linux
       before_install:
         - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
       script:
