--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ codecov: true
 
 jobs:
   include:
-  
+
     - stage: "Documentation"
       julia: 1.3
       os: linux
       script:
-        - julia -e 'Pkg.clone(pwd()); Pkg.build("HRV")'
+        - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("HRV")'
         - julia -e 'Pkg.test("HRV", coverage=true)'
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+        - julia --project=docs/ -e 'Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success:
