--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ jobs:
       julia: 1.3
       os: linux
       script:
-        - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("HRV")'
-        - julia -e 'Pkg.test("HRV", coverage=true)'
-        - julia --project=docs/ -e 'Pkg.develop(PackageSpec(path=pwd()));
+        - julia -e 'using Pkg;Pkg.test("HRV", coverage=true)'
+        - julia --project=docs/ -e 'using Pkg;Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success:
