--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
 language: julia
+os:
+  - linux
 julia:
   - 1
 
-codecov: true
-
-jobs:
-  include:
-
-    - stage: "Documentation"
-      julia: 1.3
-      os: linux
-      script:
-        - julia -e 'using Pkg;Pkg.test("HRV", coverage=true)'
-        - julia --project=docs/ -e 'using Pkg;Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
-        - julia --project=docs/ docs/make.jl
-      after_success:
-        - Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("HRV"); Pkg.test("HRV"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("HRV")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
