--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ julia:
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("HRV"); Pkg.test("HRV"; coverage=true)'
+  - julia --check-bounds=yes -e 'using Pkg;Pkg.clone(pwd()); Pkg.build("HRV"); Pkg.test("HRV"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("HRV")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
