--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ jobs:
       julia: 1.3
       os: linux
       script:
+        - wget http://physionet.org/physiotools/wfdb.tar.gz
+        - tar -xvzf wfdb.tar.gz
+        - cd wfdb-10.6.2
+        - ./configure
+        - make
+        - make install
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
