--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ jobs:
         - wget http://physionet.org/physiotools/wfdb.tar.gz
         - tar -xvzf wfdb.tar.gz
         - cd wfdb-10.6.2
-        - ./configure
-        - make
+        - ./configure /wfbd
         - make install
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
