--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ jobs:
     - stage: "Documentation"
       julia: 1.3
       os: linux
-      script:
+      before_install:
         - wget http://physionet.org/physiotools/wfdb.tar.gz
         - tar -xvzf wfdb.tar.gz
         - cd wfdb-10.6.2
-        - ./configure --prefix=/wfbd
+        - ./configure
         - make
         - make install
-        - cd ../
+      script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
