--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,7 @@ jobs:
       julia: 1.3
       os: linux
       before_install:
-        - gcc --version
-        - curl-config --version
-        - ls /usr/include/expat.h
-
-        - wget http://physionet.org/physiotools/wfdb.tar.gz
-        - tar -xvzf wfdb.tar.gz
-        - cd wfdb-10.6.2
-        - ./configure
-        - make
-        - make install
+        - ann2rr -h
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
