--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ jobs:
       julia: 1.3
       os: linux
       before_install:
-        - wget http://physionet.org/physiotools/wfdb.tar.gz
-        - tar -xvzf wfdb.tar.gz
-        - cd wfdb-10.6.2
-        - ./configure
-        - sudo make install
-        - cd ../
+        #- wget http://physionet.org/physiotools/wfdb.tar.gz
+        #- tar -xvzf wfdb.tar.gz
+        #- cd wfdb-10.6.2
+        #- ./configure
+        #- sudo make install
+        #- cd ../
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
