--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,16 @@ jobs:
       julia: 1.3
       os: linux
       before_install:
-        - wget http://physionet.org/physiotools/wfdb.tar.gz
-        - tar -xvzf wfdb.tar.gz
-        - cd wfdb-10.6.2
-        - ./configure
-        - sudo make install
-        - cd ../
+        #- wget http://physionet.org/physiotools/wfdb.tar.gz
+        #- tar -xvzf wfdb.tar.gz
+        #- cd wfdb-10.6.2
+        #- ./configure
+        #- sudo make install
+        #- cd ../
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
-        - julia -e 'using Pkg; Pkg.test("HRV", coverage=true)'
+        #- julia -e 'using Pkg; Pkg.test("HRV", coverage=true)'
       after_success:
-        - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+        #- julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
