--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "HRV"
+name = "HeartRateVariability"
 uuid = "0047d930-76bf-11ea-1377-bb3cda807e9f"
 authors = ["Jasmin Walter <jasmin.walter@mni.thm.de>"]
 version = "1.0"
